:bug: fix blockquote color in dark mode

--- a/_sass/klise/_dark.scss
+++ b/_sass/klise/_dark.scss
@@ -108,6 +108,12 @@ body[data-theme="dark"] {
     }
   }
 
+  // Blockquote
+  blockquote {
+    color: $dark-gray;
+    border-color: $dark-light;
+  }
+
   // Strong, Bold
   strong,
   b {
